// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`multiple occurrence 1`] = `
<div
  style={
    Object {
      "flex": 1,
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderLeft": "5px solid #44C6FF",
        "boxShadow": "0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset",
        "cursor": "move",
        "display": "flex",
        "flexDirection": "row",
        "padding": "10px",
      }
    }
  >
    <span
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <span
        onClick={[Function]}
        style={Object {}}
      >
        hello
      </span>
    </span>
    <sup
      style={
        Object {
          "marginTop": "2px",
          "opacity": "0.8",
          "top": 0,
        }
      }
    >
      1
    </sup>
  </div>
</div>
`;

exports[`single occurrence 1`] = `
<div
  style={
    Object {
      "flex": 1,
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderLeft": "5px solid #44C6FF",
        "boxShadow": "0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset",
        "cursor": "move",
        "display": "flex",
        "flexDirection": "row",
        "padding": "10px",
      }
    }
  >
    <span
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <span
        onClick={[Function]}
        style={Object {}}
      >
        hello
      </span>
    </span>
  </div>
</div>
`;
